2007-10-13  Akim Demaille  <akim.demaille@free.fr>

	src/ast/Makefile.in no longer exists.
	* dev/ast-ignores-gen: Remove it from ignores.

2007-10-13  Akim Demaille  <akim.demaille@free.fr>

	This is not k1.
	* configure.ac: Fix AC_INIT invocation.

2007-10-13  Akim Demaille  <akim.demaille@free.fr>

	Remove debug code.
	* src/parser/ugrammar.y (implicit): Here.
	Reported by Benoit Sigoure.

2007-10-13  Akim Demaille  <akim.demaille@free.fr>

	mv src/parser/bison/* src/parser.
	* src/parser/bison/bison.mk, src/parser/bison/flex-lexer.hh,
	* src/parser/bison/ugrammar.y, src/parser/bison/utoken.l:
	Rename as....
	* src/parser/parser.mk, src/parser/flex-lexer.hh,
	* src/parser/ugrammar.y, src/parser/utoken.l:
	this.
	Adjust dependencies.
	* src/Makefile.am, src/parser/uparser.hh: Adjust.

2007-10-12  Akim Demaille  <akim.demaille@free.fr>

	Warn about implicit noops.
	* src/ast/ast.yml (Noop::implicit): New.
	* src/parser/bison/ugrammar.y (warn, warn_implicit, implicit): New.
	Use them.
	* tests-local.mk: Update XFAILS.

2007-10-12  Akim Demaille  <akim.demaille@free.fr>

	Fix ++.
	We need to override clone (in the C++ world) for Atoms.
	* share/urbi/urbi.u (Float.++, Float.--): Rewrite.
	* tests-local.mk: k2-inplace.chk passes.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	++ is incorrect.
	* share/urbi/urbi.u (Float.++, Float.--): Try to fix them...
	* tests-local.mk: but acknowledge we failed.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	String comparison.
	* share/urbi/urbi.u (String.<=, String.>, String.>=): New.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	Makefile.am simplification.
	* src/ast/ast.mk: Fuse two variable increments.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	Return floats.
	* src/object/string-class.cc: Do not return Integers, k2 is
	not ready for them.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	Missing lval.
	* src/parser/bison/utoken.l: != is expected to have a semantic value.
