@@ -1,3 +1,11 @@
+2007-10-15  Akim Demaille  <demaille@gostai.com>
+
+	++ etc. are expressions bw expressions.
+	* src/parser/ugrammar.y: Don't require lvalues for ++, += etc.
+	And don't return lvalues either (bw, even in C ++ does not
+	return an lvalue, it doesn't make sense).
+	Give precedences to them.
+
 2007-10-13  Akim Demaille  <akim.demaille@free.fr>
 
 	src/ast/Makefile.in no longer exists.
